# aws-lambda-image-processing

./: .env.example  Cargo.toml  README.md  build.sh  create-lambda.sh  test.sh  update-lambda.sh
src/: lib.rs  main.rs
