[package]
name = "aws-rust-image-processing"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Alonso<gabriel.alonso2589@gmail.com>"]

[dependencies]
aws-config = "1.1.1"
aws-sdk-s3 = "1.8.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["s3"] }
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

