[package]
name = "aws-rust-image-processing"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Alonso<gabriel.alonso2589@gmail.com>"]

[dependencies]
aws-config = "1.1.1"
aws-sdk-s3 = "1.8.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["s3"] }
dotenv = "0.15.0"
lambda_runtime = "0.8.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
futures = "0.3.28"
mongodb = "2.4.0"
serde = "1.0.188"

[lib]
name="lib"
path="src/lib.rs"

